@@ -18,6 +18,7 @@
 \def\zqbp#1#2{\pt{#2}\zqb{#1}{#2}}
 \def\qpp{\pt 4\qp} % don't move with \transpose
 \def\nr#1{\zcharnote{8}{\lower-1pt\vbox{\eightbf#1}}}
+\def\gchord#1{\Uptext{\lower1ex\vbox{$\bf #1$}}}
 
 \raggedbottom
 \startmuflex
